# lang

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml
lang/: __init__.lisp  __init__.py  gencore.lisp  high-level.lisp  lang.asd  lang.lisp  lang.py  lispify.lisp  methods.lisp  mirror-into-python.lisp  pyobject.lisp  pythonize.lisp
lang/internals/: bootstrap.lisp  convert.lisp  design.org  early-methods.lisp  foreign.lisp  gencore.lisp  generic-functions.lisp  high-level.lisp  lambda-lists.lisp  lang.internals.asd  lispify.lisp  methods.lisp  mirror-into-lisp.lisp  mirror-into-python.lisp  modules.lisp  naming.lisp  packages.lisp  pyobject.lisp  python.lisp  pythonize.lisp
lang/lisp/: __init__.lisp  __init__.py  lang.lisp.asd  lisp.lisp  lisp.py
lang/python/: __init__.lisp  __init__.py  lang.python.asd  python.lisp
ouroboros/: __init__.py  bootstrap.lisp  call.lisp  convert.lisp  foreign.lisp  gencore.lisp  generic-functions.lisp  high-level.lisp  lispify.lisp  low-level.lisp  methods.lisp  mirror-into-lisp.lisp  mirror-into-python.lisp  ouroboros.asd  ouroboros.lisp  packages.lisp  pyobject.lisp  python-builtins.lisp  python-keywords.lisp  python-methods.lisp  python-syntax.lisp  python.lisp  pythonize.lisp  readtables.lisp
src/: Makefile  Makefile.lisp  foreign.lisp  lispify.lisp  low-level.lisp  mirror-into-lisp.lisp  mirror-into-python.lisp  mirror-objects.lisp  packages.lisp  pyapi.lisp  python.lisp  sbclmodule.asd  sbclmodule.c  sbclmodule.lisp  sbclmodule.py
